welcome.lessons.welcome.bat.bool2.BlueTicket.scala.error
blueTicket:-6: error: Missing closing brace `}' assumed here
try {
^blueTicket:1: error: expected class or object definition
var x:Int=0
^blueTicket:2: error: expected class or object definition
var y:Int=0
^blueTicket:3: error: expected class or object definition
var z:Int=0
^blueTicket:6: error: expected class or object definition
def blueTicket(a:Int, b:Int, c:Int):Int = {
^